Finishing LevelDB example

--- a/example/leveldb/Makefile
+++ b/example/leveldb/Makefile
@@ -1,10 +1,10 @@
-LEVELDB_SRC = leveldb-1.17.0
+LEVELDB_SRC = /root/leveldb-1.15.0
 EXECUTABLES = workload checker init
 DEPENDENCIES = common.h Makefile
 
 all: $(EXECUTABLES)
 
-%: %.cc $(LEVELDB_SRC) $(LEVELDB_SRC)/libleveldb.a $(DEPENDENCIES)
+%: %.cc $(LEVELDB_SRC) $(DEPENDENCIES)
 	g++ -g -o $@ $< $(LEVELDB_SRC)/libleveldb.a -I$(LEVELDB_SRC)/include -lpthread
 
 clean:
